fix(megaMenu): prevent country select from collapsing on small sreens

--- a/src/components/UI/organism/MegaMenuMainHeader/MegaMenuMainHeader.modules.scss
+++ b/src/components/UI/organism/MegaMenuMainHeader/MegaMenuMainHeader.modules.scss
@@ -15,6 +15,10 @@
     gap: 5px;
     padding: 15px 12px;
   }
+  &__country {
+    min-width: 190px;
+    flex: 0 1 220px;
+  }
 
   &__main {
     display: flex;
